--- a/index.html
+++ b/index.html
@@ -389,6 +389,17 @@
                 <div class="tab-pane fade" id="tab2">
                     <!-- Nested tabs for Enum 2 -->
                     <ul class="nav nav-tabs" id="enum-tools-tab" role="tablist">
+
+                        <li class="nav-item">
+                            <a class="nav-link active" id="enum-tools-spider-nav-item" data-bs-toggle="tab"
+                               href="#enum-tools-spider" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="Website spider"
+                                     src="assets/icons/navbar/tab-2-enum-tools/spider.png"
+                                     width="25px" height="25px">
+                            </a>
+                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" id="enum-tools-toolbox-nav-item" data-bs-toggle="tab"
                                href="#enum-tools-toolbox" role="tab">
@@ -400,19 +411,53 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link active" id="enum-tools-spider-nav-item" data-bs-toggle="tab"
-                               href="#enum-tools-spider" role="tab">
+                            <a class="nav-link" id="enum-tools-iframe-checker-nav-item" data-bs-toggle="tab"
+                               href="#enum-tools-iframe-checker" role="tab">
                                 <img data-bs-toggle="tooltip"
-                                     data-bs-placement="right" title="Website spider"
-                                     src="assets/icons/navbar/tab-2-enum-tools/spider.png"
+                                     data-bs-placement="right" title="Iframe checker"
+                                     src="assets/icons/navbar/tab-2-enum-tools/frame.png"
+                                     width="25px" height="25px">
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="enum-tools-csrf-checker-nav-item" data-bs-toggle="tab"
+                               href="#enum-tools-csrf-checker" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="CSRF checker"
+                                     src="assets/icons/navbar/tab-2-enum-tools/csrf.png"
+                                     width="25px" height="25px">
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="enum-tools-message-listener-nav-item" data-bs-toggle="tab"
+                               href="#enum-tools-message-listener" role="tab">
+                                <img data-bs-toggle="tooltip"
+                                     data-bs-placement="right" title="Message listener"
+                                     src="assets/icons/navbar/tab-2-enum-tools/message-listener.png"
                                      width="25px" height="25px">
                             </a>
                         </li>
                     </ul>
                     <div class="tab-content" id="enum-tools-tab-content">
 
-                        <!-- tab 1 - toolbox start -->
-                        <div class="tab-pane fade" id="enum-tools-toolbox" role="tabpanel" style="height: 485px">
+                        <!-- tab 1 - spider start -->
+                        <div class="tab-pane fade" id="enum-tools-spider" role="tabpanel"
+                             style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="mt-2 mb-2">
+                                    <h4> Website spider </h4>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <!-- tab 1 - spider end -->
+
+                        <!-- tab 2 - toolbox start -->
+                        <div class="tab-pane fade" id="enum-tools-toolbox" role="tabpanel"
+                             style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
                                 <div class="mt-2 mb-2">
                                     <h4> Toolbox </h4>
@@ -422,10 +467,10 @@
                                     <span>Act on current page</span>
                                     <div class="d-flex justify-content-between">
                                         <button class="btn btn-outline-primary w-50 me-1"
-                                                id="recon-tooling-highlight-forms-cp">Highlight
+                                                id="enum-tooling-highlight-forms-cp" value="highlightForms">Highlight
                                             <small class="consolas-text">&lt;form&gt;</small></button>
                                         <button class="btn btn-outline-primary w-50 me-1"
-                                                id="recon-tooling-highlight-inputs-cp">Highlight
+                                                id="enum-tooling-highlight-inputs-cp" value="highlightInputs">Highlight
                                             <small class="consolas-text">&lt;input&gt;</small></button>
                                     </div>
                                 </div>
@@ -434,27 +479,28 @@
                                     <span>Extract from current page</span>
                                     <div class="d-flex justify-content-between">
                                         <button class="btn btn-outline-primary w-25 me-1 consolas-text"
-                                                id="recon-tooling-extract-comments-cp"> comments
+                                                id="enum-tooling-extract-comments-cp" value="extractCommentsCP">
+                                            comments
                                         </button>
                                         <button class="btn btn-outline-primary w-25 me-1 consolas-text"
-                                                id="recon-tooling-extract-forms-cp"> &lt;form&gt;
+                                                id="enum-tooling-extract-forms-cp" value="extractFormsCP"> &lt;form&gt;
                                         </button>
                                         <button class="btn btn-outline-primary w-25 me-1 consolas-text"
-                                                id="recon-tooling-extract-url-cp">Urls
+                                                id="enum-tooling-extract-url-cp" value="extractUrlsCP">urls
                                         </button>
                                         <button class="btn btn-outline-primary w-25 me-1 consolas-text"
-                                                id="recon-tooling-extract-external-uri-cp">Headers
+                                                id="enum-tooling-extract-headers" value="extractHeaderCP">headers
                                         </button>
                                     </div>
                                 </div>
 
                                 <div class="form-group mb-1">
-                                    <span>Output <small>(json)</small></span>
+                                    <span>Output</span>
                                     <!-- start textarea and copybutton-->
                                     <div class="position-relative d-flex">
                                         <textarea
                                                 readonly
-                                                id="recon-tooling-output-textarea"
+                                                id="enum-tooling-output-textarea"
                                                 class="form-control"
                                                 rows="11"
                                                 style="width: 100%; padding-right: 40px;"></textarea>
@@ -471,20 +517,25 @@
 
                             </div>
                         </div>
-                        <!-- tab 1 - toolbox end -->
-                        <!-- tab 2 - spider start -->
-                        <div class="tab-pane fade show active" id="enum-tools-spider" role="tabpanel"
-                             style="height: 485px">
-                            <div class="d-flex flex-column justify-content-between h-100">
-                                <div class="mt-2 mb-2">
-                                    <h4> Website spider </h4>
-                                </div>
+                        <!-- tab 2 - toolbox end -->
 
-
-                            </div>
+                        <!-- tab 3 - iframe checker start -->
+                        <div class="tab-pane fade" id="enum-tools-iframe-checker" role="tabpanel">
+                            sup
                         </div>
-                        <!-- tab 2 - spider end -->
+                        <!-- tab 3 - iframe checker end -->
 
+                        <!-- tab 4 - csrf checker start -->
+                        <div class="tab-pane fade" id="enum-tools-csrf-checker" role="tabpanel">
+                            sup
+                        </div>
+                        <!-- tab 4 - csrf checker end -->
+
+                        <!-- tab 5 - message listener start -->
+                        <div class="tab-pane fade" id="enum-tools-message-listener" role="tabpanel">
+                            sup
+                        </div>
+                        <!-- tab 5 - message listener end -->
                     </div>
 
 
