--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                     <div class="tab-content" id="enum-tools-tab-content">
 
                         <!-- tab 1 - spider start -->
-                        <div class="tab-pane fade" id="enum-tools-spider" role="tabpanel"
+                        <div class="tab-pane fade show active" id="enum-tools-spider" role="tabpanel"
                              style="height: 485px">
                             <div class="d-flex flex-column justify-content-between h-100">
                                 <div class="mt-2 mb-2">
@@ -520,8 +520,33 @@
                         <!-- tab 2 - toolbox end -->
 
                         <!-- tab 3 - iframe checker start -->
-                        <div class="tab-pane fade" id="enum-tools-iframe-checker" role="tabpanel">
-                            sup
+
+                        <div class="tab-pane fade"
+                             id="enum-tools-iframe-checker"
+                             role="tabpanel" style="height: 485px">
+                            <div class="d-flex flex-column justify-content-between h-100">
+                                <div class="mt-2 mb-2">
+                                    <h4> Iframe checker </h4>
+                                </div>
+
+                                <div class="w-100">
+                                    <div class="d-flex justify-content-between mb-1">
+                                        <button class="btn btn-outline-primary w-50 me-1" id="enum-tooling-iframe-get-current-url" value="enumToolingGetCurrentUrlIframe">Get current URL</button>
+                                        <button class="btn btn-outline-primary w-50" id="enum-tooling-iframe-check-iframe-button">Check</button>
+                                    </div>
+
+                                    <div class="form-group w-100 d-flex justify-content-between">
+                                        <input class="form-control w-100" type="text" id="enum-tooling-iframe-url-input"
+                                               placeholder="https://www.example.com">
+                                    </div>
+                                </div>
+
+                                <div class="mt-1 h-100 w-100">
+                                    <iframe id="enum-tooling-iframe-check-iframe-element"
+                                            class="w-100 h-100 border rounded"
+                                            src="https://www.example.com"></iframe>
+                                </div>
+                            </div>
                         </div>
                         <!-- tab 3 - iframe checker end -->
 
@@ -687,7 +712,10 @@
 </div>
 <script src="assets/js/main.js"></script>
 <script src="assets/js/extension-events.js"></script>
-<script src="assets/js/tabs/tab-1-tooling.js"></script>
 
+<!-- tab specific script start -->
+<script src="assets/js/tabs/tab-1-tooling.js"></script>
+<script src="assets/js/tabs/tab-2-enum-tooling.js"></script>
+<!-- tab specific scripts end -->
 </body>
 </html>
